--- a/index.html
+++ b/index.html
@@ -209,7 +209,12 @@
     
     <!-- Datos de ejemplo - REEMPLAZAR CON TUS DATOS REALES -->
     <script src="dece_data.js"></script>
-    
+    <!-- PapaParse para leer CSV -->
+<script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
+
+<!-- App -->
+<script src="app.js"></script>
+
     <!-- Aplicación Principal -->
     <script src="app.js"></script>
 </body>
