--- a/index.html
+++ b/index.html
@@ -209,6 +209,18 @@
                         <p>5. Click en el buffer para ver métricas o eliminarlo</p>
                     </div>
                 </div>
+                
+                <div class="legend-section">
+                    <div class="legend-title">💾 Persistencia</div>
+                    <div class="legend-help">
+                        <p>✅ Los cambios se <strong>guardan automáticamente</strong></p>
+                        <p>✅ Al recargar la página, los buffers mantienen su posición</p>
+                        <p>✅ Los buffers personalizados se conservan</p>
+                        <button class="btn-reset-state" onclick="resetAllBuffersState()">
+                            🔄 Reiniciar Todo
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
 
