--- a/index.html
+++ b/index.html
@@ -66,11 +66,13 @@
                 <span>Completar Cobertura</span>
             </button>
             
-            <button class="btn-action" id="btnOptimizar" title="Optimizar Núcleos">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M12 2v4M12 18v4M4.93 4.93l2.83 2.83M16.24 16.24l2.83 2.83M2 12h4M18 12h4M4.93 19.07l2.83-2.83M16.24 7.76l2.83-2.83"/>
+            <button class="btn-action" id="btnOptimizar" title="Exportar resultados (CSV / JSON)">
+               <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+               <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+               <polyline points="7 10 12 15 17 10"/>
+               <line x1="12" y1="15" x2="12" y2="3"/>
                 </svg>
-                <span>Optimizar</span>
+                <span>Exportar</span>
             </button>
             <button class="btn-icon" id="toggleStats" title="Estadísticas">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
